k3s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
  labels:
    app: inventory-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: inventory-app
          image: inventoryappacr.azurecr.io/inventory-app:latest
          ports:
            - containerPort: 5001
