k3s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-app-service
spec:
  selector:
    app: inventory-app
  ports:
    - port: 80
      targetPort: 5001
  type: ClusterIP
